Update on Overleaf.

--- a/resume/committees.tex
+++ b/resume/committees.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Program Committees}
+\cvsection{Activities, Achievements and Position of Responsibilities}
 
 
 %-------------------------------------------------------------------------------
@@ -11,17 +11,59 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Problem Writer} % Position
-    {2016 CODEGATE Hacking Competition World Final} % Committee
-    {S.Korea} % Location
-    {2016} % Date(s)
+    {Volunteer} % Position
+    {IEEE WIE Volunteer for Prayas- An initiative to help kids dream bigger} % Committee
+    {Mysore} % Location
+    {2015-2016} % Date(s)
 
 %---------------------------------------------------------
+
+   \cvhonor
+    {Student Co-ordinator} % Position
+    {2016 Second International Conference on Cognitive Computing and
+Information Processing (CCIP).(IEEE) ,} % Committee
+    {Mysore} % Location
+    {2015} % Date(s)
+
+%---------------------------------------------------------
+
+   \cvhonor
+    {Ed. Support Volunteer} % Position
+    {Make a Difference(MAD) - NGO} % Committee
+    {Mysore} % Location
+    {2016-2017} % Date(s)
+
+%---------------------------------------------------------
+
   \cvhonor
-    {Organizer \& Co-director} % Position
-    {1st POSTECH Hackathon} % Committee
-    {S.Korea} % Location
-    {2013} % Date(s)
+    {Delegate} % Position
+    {International Conference on Computer Networks and Communication Technologies, Springer: Walking and Transition Irregularity Detection Using ANN Approach for Wireless Body Area Network  } % Committee
+    {Coimbatore} % Location
+    {2018} % Date(s)
+
+%---------------------------------------------------------
+
+  \cvhonor
+    {Participant} % Position
+    {Code for Good, JP Morgan Chase \& Co.} % Committee
+    {Bangalore} % Location
+    {2018} % Date(s)
+
+%---------------------------------------------------------
+
+   \cvhonor
+    {Member} % Position
+    {IEEE} % Committee
+    {Bangalore} % Location
+    {Present} % Date(s)
+
+%---------------------------------------------------------
+
+   \cvhonor
+    {Vice Chairman} % Position
+    {CSI-SJCE, Dept. of Information Science and Engg ,} % Committee
+    {Mysore} % Location
+    {Present} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
