--- a/resume/education.tex
+++ b/resume/education.tex
@@ -11,13 +11,35 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Exp. Aug. 2017} % Date(s)
+    {B.E. in Information Science and Engineering} % Degree
+    {JSS Science and Technology University( former SJCE)} % Institution
+    {Mysore, Karnataka} % Location
+    {Aug. 2015-Aug. 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {CGPA: 8.17*}
+      \end{cvitems}
+    }
+    
+    \cventry
+    {CLASS 12 IN CBSE IN PCM} % Degree
+    {Delhi Public School(D.P.S)} % Institution
+    {Ranchi, Jharkhand} % Location
+    {2012 – 2014} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Percentage: 83.8\%}
+      \end{cvitems}
+    }
+    
+    \cventry
+    {CLASS 10 IN CBSE} % Degree
+    {Bridgeford School} % Institution
+    {Ranchi, Jharkhand} % Location
+    {2011 – 2012} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {CGPA: 10}
       \end{cvitems}
     }
 
