--- a/resume/writing.tex
+++ b/resume/writing.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Writing}
+\cvsection{Skills}
 
 
 %-------------------------------------------------------------------------------
@@ -11,27 +11,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {Founder \& Writer} % Role
-    {A Guide for Developers in Start-up} % Title
-    {Facebook Page} % Location
-    {Jan. 2015 - PRESENT} % Date(s)
+    {C, Python, Css, Javascript, HTML, PHP, Julia, Bootstrap} % Role
+    {Programming Languages} % Title
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Drafted daily news for developers in Korea about IT technologies, issues about start-up.}
+        \item {Basic Knowledge}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Undergraduate Student Reporter} % Role
-    {AhnLab} % Title
-    {S.Korea} % Location
-    {Oct. 2012 - Jul. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
-      \end{cvitems}
-    }
 
 %---------------------------------------------------------
 \end{cventries}
