--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-darknight}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -56,15 +56,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{profile}
-\name{Byungjin}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\name{Apurwa}{Agrawal}
+%\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
+\address{Gd/o Lt. Bhola Prasad Agrawal, c/o FMCG Store, Harmu Bazar Chowk, Ranchi, Jharkhand- 834002}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+91) 9934071517}
+\email{apurwaagr@gmail.com}
+%\homepage{www.posquit0.com}
+\github{ApurwaApu}
+\linkedin{https://www.linkedin.com/in/apurwa-agrawal-825667118/}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -72,7 +72,7 @@
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -84,24 +84,25 @@
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
-\makecvfooter
-  {\today}
-  {Claud D. Park~~~·~~~Résumé}
-  {\thepage}
+%\makecvfooter
+%  {\today}
+%  {Claud D. Park~~~·~~~Résumé}
+%  {\thepage}
 
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary.tex}
-\input{resume/experience.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
+%\input{resume/summary.tex}
 \input{resume/education.tex}
-\input{resume/extracurricular.tex}
+\input{resume/experience.tex}
+\input{resume/writing.tex}
+\input{resume/presentation.tex}
+\input{resume/committees.tex}
+%\input{resume/honors.tex}
+%\input{resume/committees.tex}
+%\input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
