--- a/resume/presentation.tex
+++ b/resume/presentation.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Presentation}
+\cvsection{Projects}
 
 
 %-------------------------------------------------------------------------------
@@ -11,13 +11,39 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
+    {A Web Based Portal} % Role
+    {shaadibookings.com} % Event
+    {HTML, Css, Bootstrap, Codeigniter} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+       % \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+
+	\cventry
+    {Using Werable Sensors to Monitor and improvise Patirnts Quality of Life. Automation of Pre-Diagnostics} % Role
+    {Proactive Heath Service Area} % Event
+    {Ongoing} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s). 
+       % \item {}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+
+	\cventry
+    {Using Image Processing to Recognize Vehicle and take toll amount without stoppinf the vehicle} % Role
+    {E-toll System} % Event
+    {Ongoing} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+       % \item {}
       \end{cvitems}
     }
 
